* дополнена документация;
* индексные сеттеры и геттеры класса ANN теперь final, их реализации вынесены в базовый класс;
* добавлен класс Reshape, меняющий форму тензора на другую, с таким же объемом;
* исправлен метод setTutor в дочерних классах - он теперь не выбрасывает исключения, и кое-где удален вообще;
* в Model добавлен вариативный метод setTutor позволяющий установить Учителя сразу для всех подсетей;

* добавлен класс SoftMax и юнит-тест для него;
* исправлен конструктор в ANN;

* удалены методы ANN::setMode()/getMode() как нефункциональные;
* еще несколько методов ANN стали чисто-виртуальными. Это немного раздувает код дочерних классов, за то улучашает читабельность;
* методы Learnable::batchBegin()/batchEnd() теперь final;
* добавлена разметка Doxygen в ANN.hpp;

* добавлена поддержка регуляризации;
* регуляризация реализована в SimpleTutor;
* удален метод DataHolder::update() и его тесты;
* добавлены комментарии Doxygen;

* добавлен класс Generator - входного слоя сети, генерирующей шум для GAN;

* добавлена библиотека Tensor2JPEG;
* добавлена библиотека для работы с MNIST;
* добавлен тест для работы с MNIST и toJPEG;

* Arctan, тест для Arctan;
* простой классификатор MNIST;
* добавлен слой Gain, тест для Gain;
* в классы сети добавлен диагностический метод dump();
* в SoftMax и ANN добавленны ассерты;
* добавлен прототип классификатора для MNIST, вроде даже работает;
* добавлена поддержка OpenMP;

* ReLUx и тест;
* ELU и тест;
* метод Model::addLayer() теперь реализован через вариативный шаблон и может принимать дополнительные аргументы;
* SELU и тест;
* инициализация Layer;

* добавлен отладочный слой Assertion для отслеживания ошибок при передаче данных между слоями;
* добавлена библиотека для тестирования нейросетевых моделей;
* класс Arctan переведен на библиотеку юнит-тестирования моделей;

* упорядочен механизм работы с ГСЧ;
* классификатор дает на MNIST ошибку порядка 3.7%;

* -Wall
* -Wextra