@@ -1,8 +1,10 @@
 all:
 	make -C units
 	make -C MNIST.classifier
+	make -C fuzzy2jpeg
 run:
 	make -C units run
 clean:
 	make -C units clean
 	make -C MNIST.classifier clean
+	make -C fuzzy2jpeg clean
