@@ -57,3 +57,8 @@
 
 * -Wall
 * -Wextra
+
+* ReLU - переделан тест;
+* добавлен пример генерации картинок для TestModel -- fuzzy2jpeg;
+TODO: подумать о переделке DataHolder/Tensor/tensormath  в Абстрактную Фабрику или типа того, дабы сделать CUDA;
+TODO: внести tensormath в Tensor;
